# pricing_model_simulator

./: .env.example  .gitignore  AGENTS.md  Agents.md  README.md  docker-compose.yml  pricing_simulator_tech_spec_concise_v4.txt  pyproject.toml  render.yaml  requirements.txt
.cursor/skills/writing-prs/: SKILL.md  examples.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  2590870933fe_add_customer_lifetime_table.py  3b2c1d4e5f6a_spec_gap_columns.py
app/: __init__.py  config.py  main.py
app/api/routes/: __init__.py  runs.py
app/db/: base.py  session.py
app/domain/: __init__.py  customer.py
app/models/: __init__.py  customer.py  customer_lifetime.py  daily_aggregate.py  daily_customer_outcome.py  experiment_assignment.py  promo_budget.py  run_parameter.py  simulation_run.py
app/schemas/: __init__.py  api_responses.py  batch_runs.py  day_metrics.py  run_config.py
app/services/metrics/: __init__.py  aggregation.py
app/services/pricing/: __init__.py  geographic.py  policies.py  promo.py  temporal.py
app/services/simulation/: __init__.py  assignment.py  engine.py  incrementality.py  retention.py
app/services/stats/: __init__.py  inference.py
docs/: causal-inference.md  mathematical-models.md  pricing-model.md  quickstart.md  spec-mapping.md
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: RunWorkspace.tsx  (+2 more)
notebooks/: 01_model_reference.ipynb  02_simulation_and_metrics.ipynb  03_ab_and_clv.ipynb  04_statistical_inference.ipynb  05_bayesian_experiment_inference.ipynb  06_executive_pricing_experiment.ipynb  07_causal_inference.ipynb  README.md  SKILL_notebook_quality.md  ab_test_analysis.ipynb  context_and_constraints_demo.ipynb  customer_model_validation.ipynb  experiment_comparison_demo.ipynb  repeat_purchase_validation.ipynb  simulation_smoke_test.ipynb
scripts/: quick_analysis.py  run_batch_seeds.py  start.sh
tests/: test_api_runs.py  test_customer.py  test_engine_boundaries.py  test_experiment_rollups.py  test_inference.py  test_notebooks_execute.py
(+1 files in other folders)
