[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-simulator"
version = "0.1.0"
description = "Customer-level pricing simulation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.28.0", "pytest>=8.0.0", "ipykernel>=6.29.0", "jupyter>=1.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
