[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-simulator"
version = "0.1.0"
description = "Customer-level pricing simulation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "ipykernel>=6.29.0",
  "jupyter>=1.1.0",
  "nbconvert>=7.16.0",
  "nbformat>=5.10.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "statsmodels>=0.14.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI injects dependencies via Depends() in parameter defaults.
[tool.ruff.lint.per-file-ignores]
"app/api/routes/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
